# Hanachan

./: .dockerignore  .env.e2e  .env.example  .gitignore  .pre-commit-config.yaml  AI_USER_GUIDE.md  ARCHITECTURE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DEMO_GUIDE.md  Dockerfile  PHASE_1_COMMIT_MESSAGE.md  PLAN.md  Playwright_Test_Conventions_Hanachan.md  README.md  RESEARCH.md  TEST_ACCOUNTS.md  agents_qa.md  agents_qa_long.md  bug_report_2026_01_25.txt  check_users.ts  class-latex.txt  docker-compose.yml  e2e_error_report.txt  er.txt  heyapi.config.ts  middleware.ts  next.config.js  null  package-lock.json  package.json  playwright.config.ts  playwright_e_2_e_testing_rules_anti_patterns.md  pnpm-lock.yaml  qa_report.md  run.sh  runs.json  seed_cloud.sql  skills-lock.json  stryker.config.json  (+13 more)
fastapi/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  ISSUES.md  pyproject.toml  requirements.txt  test_agent.py  test_agent_graph.py
fastapi-core/: .dockerignore  .gitignore  .importlinter  Dockerfile  README.md  pyproject.toml  run_tests.sh  test_decks_script.py
fastapi-core/app/: main.py
fastapi-core/app/adapters/http/: chat.py  decks.py  learning.py  reading.py  sessions.py
fastapi-core/app/adapters/supabase/: learning_repo.py  reading_repo.py
fastapi-core/app/api/routes/: learning.py  reading.py
fastapi-core/app/auth/: context.py  jwt.py  middleware.py
fastapi-core/app/core/: config.py  exceptions.py
fastapi-core/app/core/learning/: models.py  services.py
fastapi-core/app/core/reading/: errors.py  models.py  policies.py  services.py
fastapi-core/app/core/services/: chat_service.py  deck_service.py
fastapi-core/app/dependencies/: auth.py
fastapi-core/app/mcp/: server.py
fastapi-core/app/mcp/tools/: homework.py  profile.py  progress.py
fastapi-core/app/models/: learning.py  reading.py
fastapi-core/app/ports/: repositories.py
fastapi-core/app/repositories/: learning.py  reading.py
fastapi-core/app/services/: learning.py  reading.py
fastapi-core/scripts/: setup_readonly_role.sql
fastapi-core/tests/: simulation_client.py  test_health.py  test_sql_safety.py
fastapi-core/tests/integration/: test_core_integration.py
fastapi-core/tests/logic/: test_learning.py  test_learning_decks.py  test_learning_qa_comprehensive.py
fastapi-domain/: .env.example  .gitignore  .importlinter  .secrets.baseline  Dockerfile  README.md  pyproject.toml
fastapi-domain/app/: main.py
fastapi-domain/app/adapters/http/: chat.py  commands.py  decks.py  learning.py  reading.py  sessions.py
fastapi-domain/app/adapters/supabase/: learning_repo.py  reading_repo.py
fastapi-domain/app/auth/: jwt.py
fastapi-domain/app/domain/learning/: models.py  services.py
fastapi-domain/app/domain/reading/: errors.py  models.py  policies.py  services.py
fastapi-domain/app/mcp/: server.py
fastapi-domain/app/ports/: repositories.py
fastapi-domain/app/shared/: time.py
fastapi-domain/tests/: test_health.py
fastapi-domain/tests/domain/: test_learning.py
fastapi/app/: main.py  migrate_sentences.py
fastapi/app/agents/: __init__.py  deck_manager.py  fsrs_enhanced_agent.py  memory_agent.py  reading_creator.py  user_profile.py
fastapi/app/api/: deps.py
fastapi/app/api/v1/: api.py
fastapi/app/api/v1/endpoints/: __init__.py  admin.py  chat.py  decks.py  (+9 more)
fastapi/app/core/: admin_security.py  config.py  database.py  errors.py  llm.py  logging.py  rate_limit.py  security.py  supabase.py
fastapi/app/schemas/: admin.py  chat.py  context.py  learning.py  memory.py  session.py  speaking.py  video_dictation.py
fastapi/app/services/: __init__.py  admin_service.py  deck_service.py  fsrs_service.py  langchain_neo4j.py  langchain_qdrant.py  learning_service.py  sentence_annotator.py  sentence_library.py  speaking_practice.py  video_dictation.py  video_embeddings.py
fastapi/app/services/memory/: consolidation.py  episodic_memory.py  semantic_memory.py  session_memory.py
fastapi/memory_api/: .gitignore  README.md  config.py  episodic_memory.py  main.py  memory_agent.py  pyproject.toml
fastapi/notebooks/: 08_episodic_with_semantic.ipynb
fastapi/scripts/: seed_sample_profiles.py  test_complex_flow.py  test_new_agent.py
fastapi/tests/: conftest.py  test_architecture_violations.py  test_config.py  test_fsrs_service.py  test_health.py  test_security.py  test_session_api.py
fastapi/tests/fixtures/: test_accounts.py
src/fastapi/: CHANGELOG.md  Dockerfile  pyproject.toml
src/fastapi/app/: main.py
src/fastapi/app/agents/: __init__.py  tutor_agent_mcp.py
src/fastapi/app/api/: core_deps.py  deps.py
src/fastapi/app/auth/: context.py  jwt.py  middleware.py
src/fastapi/app/cli/: __init__.py  chat.py
src/fastapi/app/core/: config.py  llm.py  logging.py  observability.py  security.py  supabase.py
src/fastapi/app/repositories/: learning.py  reading.py  wanikani.py
src/fastapi/app/schemas/: chat.py  memory.py  session.py  wanikani.py
src/fastapi/app/services/: __init__.py
src/fastapi/app/tutor/: engine.py  idle.py  persistence.py  quiz_strategy.py  state.py
src/fastapi/app/utils/: hitl.py  safe_sql.py
src/fastapi/tests/: conftest.py
src/fastapi/tests/architecture/: test_architecture_guard.py  test_architecture_violations.py
src/fastapi/tests/qa_scenarios/: README.md  scenario_api_flow.py  scenarios.md  smoke_test.py  test_chatbot_learn_review.py  test_fsrs_learn_review.py
src/fastapi/tests/unit/: test_agent_guardrails.py  test_agent_quality_judge.py  test_agent_tools.py  test_chat_cli.py  test_chat_security.py  test_chat_stream.py  test_config.py  test_e2e_simulation.py  test_fsrs_worker.py  test_graph_observation.py  test_health.py  test_hitl.py  test_lesson_batch_completion.py  test_llm_base_url.py  test_mcp_client.py  test_memory_features.py  test_memory_persistence.py  test_review_submission_semantics.py  test_safe_sql.py  test_session_api.py  test_session_api_v2.py  test_session_memory.py  test_sql_human_gate.py  test_tracing.py  test_tutor_decision.py  test_tutor_fsrs_node.py  test_tutor_mcp_tools.py  test_tutor_response_node.py  test_tutor_router.py
(+1716 files in other folders)
