[project]
name = "fastapi-core"
version = "0.1.0"
description = "Hanachan Core Service - Single Source of Truth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "mcp>=1.6.0",
    "supabase>=2.10.0",
    "openai>=1.54.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
    "mutmut>=2.5.0",
    "bandit>=1.7.0",
    "mypy>=1.13.0",
]

[tool.mutmut]
paths_to_mutate = "app/"
backup = false
runner = "python -m pytest tests/ -x"
tests_dir = "tests/"
mutate_covered_only = true
show_mutants = true

[tool.mutmut.mutator]
# Disable some mutation operators that are too aggressive
arithmetic = true
boolean = true
conditional_boundary = true
conditional_negation = true
decorator = true
expression_swap = true
logical = true
number = true
operator = true
regex = true
string = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "mutation: Tests for mutation testing",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
