[project]
name = "hanachan-fastapi"
version = "0.1.0"
description = "FastAPI backend for Hanachan chatbot"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain-openai>=0.0.5",
    "qdrant-client>=1.7.0",
    "neo4j>=5.16.0",
    "langgraph>=0.0.26",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.9.0",
    "supabase>=2.28.0",
    "psycopg2-binary>=2.9.11",
]

[tool.uv]
managed = true
