[project]
name = "hanachan-fastapi"
version = "0.1.0"
description = "FastAPI backend for Hanachan chatbot"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain-openai>=0.0.5",
    "qdrant-client>=1.7.0",
    "neo4j>=5.16.0",
    "langgraph>=0.0.26",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.9.0",
    "supabase>=2.28.0",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "elevenlabs>=2.37.0",
    "langchain-community>=0.4.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.21",
    "janome>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
