[project]
name = "hanachan-fastapi"
version = "0.1.0"
description = "FastAPI backend for Hanachan chatbot"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "langchain-openai>=0.0.5",
    "qdrant-client>=1.7.0",
    "neo4j>=5.16.0",
    "langgraph>=0.0.26",
    "pydantic-settings>=2.1.0",
    "typing-extensions>=4.9.0",
    "supabase>=2.28.0",
    "psycopg2-binary>=2.9.11",
    "PyJWT>=2.8.0",
    "slowapi>=0.1.9",
    "elevenlabs>=2.37.0",
    "langchain-community>=0.4.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.2.21",
    "janome>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "faker>=22.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",
    "faker>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "scripts/*", "notebooks/*", "**/__pycache__/*"]
parallel = true
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
