[project]
name = "memory-api"
version = "1.0.0"
description = "Episodic + Semantic Memory backend using Qdrant, Neo4j, and OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # LangChain + LangGraph
    "langchain>=0.2.0",
    "langchain-openai>=0.1.8",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.5",
    # Databases
    "qdrant-client>=1.9.0",
    "neo4j>=5.20.0",
    # OpenAI
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    # Utilities
    "httpx>=0.27.0",
]

[project.scripts]
start = "uvicorn main:app --reload --port 8765"

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
]
